src/test/ui/attribute-with-no-generics-in-parameter-list.stderr
error: attribute without generic parameters
  --> $DIR/attribute-with-no-generics-in-parameter-list.rs:1:8
   |
LL | fn foo<#[attr]>() {} //~ ERROR attribute without generic parameters
   |        ^^^^^^^ attributes are only permitted when preceding parameters

error: aborting due to previous error

